start cards in summary

--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -3,4 +3,46 @@
         <h1>Summary</h1>
         <h3>Task overview</h3>
     </div>
+
+    <div class="summary-body">
+        <div class="summary-cards">
+            <div class="task-overview">
+                <mat-card>
+                    <span>5</span> <br>
+                    <span>Tasks in Board</span>
+                </mat-card>
+
+                <mat-card>
+                    <span>2</span> <br>
+                    <span>Tasks in Progress</span>
+                </mat-card>
+
+                <mat-card>
+                    <span>3</span> <br>
+                    <span>Awaiting Feedback</span>
+                </mat-card>
+            </div>
+
+            <div class="deadline-card">
+                <mat-card>1 Urgent Deadline</mat-card>
+            </div>
+
+            <div class="done-cards">
+                <mat-card>
+                    <span>1</span> <br>
+                    <span>To-do</span>
+                </mat-card>
+
+                <mat-card>
+                    <span>1</span> <br>
+                    <span>Done</span>
+                </mat-card>
+            </div>
+        </div>
+
+        <div class="greeting">
+            <h3>Welcome,</h3>
+            <h3>Anastasiia!</h3>
+        </div>
+    </div>
 </div>
