change style, colors

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,17 +1,31 @@
-<nav>
-    <div class="account">
-        <button mat-icon-button>
-            <mat-icon>account_circle</mat-icon>
-          </button>
-    </div>
+<div class="nav-bg">
+    <nav class="nav-top">
+        <div class="btn-box">
+            <button mat-button class="active-btn">Summary</button>
+            <button mat-button>Board</button>
+            <button mat-button>Contact</button>
+        </div>
+    </nav>
 
-    <div class="btn-box">
-        <button mat-raised-button>Summary</button>
-        <button mat-raised-button>Board</button>
-        <button mat-raised-button>Contact</button>
-    </div>
+    <nav class="nav-left">
+        <div class="logo-box">
+            <h1>Join</h1>
+        </div>
 
-    <div class="logo-box">
-        <h2>Join</h2>
-    </div>
-</nav>
+        <div class="add-btn">
+            <button mat-icon-button>
+                <mat-icon>note_add</mat-icon>
+            </button>
+
+            <button mat-icon-button>
+                <mat-icon>person_add</mat-icon>
+            </button>
+        </div>
+
+        <div class="account">
+            <button mat-icon-button>
+                <mat-icon>account_circle</mat-icon>
+            </button>
+        </div>
+    </nav>
+</div>
