--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -1,5 +1,5 @@
-<div class="summary-container">
-    <div class="header">
+<mat-card class="summary-container">
+    <div class="card-header">
         <h1>Summary</h1>
         <h3>Task overview</h3>
     </div>
@@ -42,7 +42,9 @@
 
         <div class="greeting">
             <h3>Welcome,</h3>
-            <h3>Anastasiia!</h3>
+            <h3>Anastasiia 
+                <mat-icon>waving_hand</mat-icon>
+            </h3>
         </div>
     </div>
-</div>
+</mat-card>
