--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
 .container {
     padding-left: 10vw;
-    padding-right: 10vw;
-    padding-top: 5vh;
+    position: absolute;
+    top: 72px;
+    left: 0px;
 }
