--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,15 +1,39 @@
-nav {
-    height: 56px;
-    background: #ede3da;
+.nav-bg {
+    height: 100vh;
+    width: 100vw;
+    max-width: 100%;
+    background: var(--bg-dark);
+    position: relative;
+}
+
+.nav-top {
+    height: 72px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 5vh;
+    padding-right: 5vh;
+}
+
+.nav-left {
+    height: 100vh;
+    width: 10vw;
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding-left: 24px;
-    padding-right: 24px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
 .logo-box {
-    h2 {
+    padding-top: 24px;
+
+    h1 {
+        font-size: 42px;
+        font-weight: 800;
         margin: 0;
         color: var(--header);
     }
@@ -17,17 +41,37 @@ nav {
 
 .btn-box {
     button {
-        background: var(--bg);
-        margin-left: 12px;
-        margin-right: 12px;
-        color: var(--header);
+        margin-left: 32px;
+        margin-right: 32px;
+        color: var(--bg-light);
+        font-size: 20px;
         font-weight: 800;
     }
 }
 
+.active-btn {
+    box-shadow: 0px 0px 6px 2px #f1e0fe;
+}
+
 .account {
+    padding-bottom: 36px;
+
     button {
-        background: var(--bg);
+        background: var(--bg-light);
         color: var(--header);
+    }
+}
+
+.add-btn {
+    display: flex;
+    flex-direction: column;
+
+    button {
+        background: var(--bg-light);
+        color: var(--header);
+
+        &:first-child {
+            margin-bottom: 56px;
+        }
     }
 }
