--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { 
-  margin: 0; 
-  font-family: Roboto, "Helvetica Neue", sans-serif; 
-  background: var(--bg);
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 :root {
-    --bg: #f9f6f3;
-    --header: #5B4325;
-    --beige: #c2a083;
+  --bg-dark: linear-gradient(to right, #292F4F, #111427);
+  --bg-light: #BBC1E1;
+  --header: #647dfe;
+  --font: #4b5585;
+}
+
+.card-header {
+  display: flex;
+  align-items: center;
+  margin-left: 32px;
+  margin-top: 16px !important;
+
+  h1 {
+      margin-top: 0;
+      margin-bottom: 0;
+      margin-right: 16px;
+      color: var(--header);
+      font-size: 42px;
+      font-weight: 600;
+      width: 200px;
+      border-right: 2px solid var(--header);
   }
+
+  h3 {
+      margin: 0;
+      font-weight: 600;
+      color: var(--header);
+  }
+}
