--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,6 +14,10 @@
 
         <div class="add-btn">
             <button mat-icon-button>
+                <mat-icon>calendar_month</mat-icon>
+            </button>
+
+            <button mat-icon-button>
                 <mat-icon>note_add</mat-icon>
             </button>
 
