--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -41,10 +41,29 @@
         </div>
 
         <div class="greeting">
-            <h3>Welcome,</h3>
-            <h3>Anastasiia 
-                <mat-icon>waving_hand</mat-icon>
-            </h3>
+            <div class="context">
+                <p class="txt-time">{{ time | date:'mediumTime' }}</p>
+                <h3>{{ greeting }},</h3>
+                <h3>Anastasiia
+                    <mat-icon>waving_hand</mat-icon>
+                </h3>
+            </div>
+
+
+            <div class="area">
+                <ul class="circles">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
         </div>
     </div>
 </mat-card>
