--- a/src/app/summary/summary.component.scss
+++ b/src/app/summary/summary.component.scss
@@ -51,10 +51,7 @@
 
     h3 {
         font-size: 42px;
-
-        &:first-child {
-            color: var(--font);
-        }
+        color: white;
 
         &:last-child {
             color: var(--header);
