--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,6 +18,10 @@
             </button>
 
             <button mat-icon-button>
+                <mat-icon>sunny</mat-icon>
+            </button>
+
+            <button mat-icon-button>
                 <mat-icon>note_add</mat-icon>
             </button>
 
