--- a/src/app/summary/clock.scss
+++ b/src/app/summary/clock.scss
@@ -1,37 +1,82 @@
-.context {
-    z-index: 2;
-    position: absolute;
-    top: 30vh;
+.clock {
+    width: 350px;
+    height: 350px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    background: url('/assets/img/clock.png');
+    background-size: cover;
+    border: 4px solid var(--bg-light);
+    border-radius: 50%;
+    box-shadow: 0 -15px 15px rgba(255, 255, 255, 0.05),
+                inset 0 -15px 15px rgba(255, 255, 255, 0.05),
+                0 15px 15px rgba(0, 0, 0, 0.3),
+                inset 0 15px 15px rgba(0, 0, 0, 0.3);
 
-    .txt-time {
-        text-align: center;
-        color: white;
-        font-size: 64px;
-        letter-spacing: 5px;
-        font-weight: 600;
+    &::before {
+        content: '';
+        position: absolute;
+        width: 15px;
+        height: 15px;
+        background: #fff;
+        border-radius: 50%;
+        z-index: 10000;
     }
 
-    .txt-greetings {
-        text-align: center;
-        letter-spacing: 3px;
-        color: white;
-        font-size: 18px;
-    }
+    .hour, .min, .sec {
+        position: absolute;
 
-    .txt-suggestion {
-        text-align: center;
-        color: white;
-        text-decoration: none;
-    }
-}
+        .hr {
+            width: 160px;
+            height: 160px;
 
-p {
-    margin-top: 24px;
-    margin-bottom: 48px;
+            &::before {
+                content: '';
+                position: absolute;
+                width: 8px;
+                height: 80px;
+                background: var(--header);
+                z-index: 10;
+                border-radius: 6px 6px 0 0;
+            }
+        }
+
+        .mn {
+            width: 190px;
+            height: 190px;
+
+            &::before {
+                content: '';
+                position: absolute;
+                width: 4px;
+                height: 90px;
+                background: #fff;
+                z-index: 11;
+                border-radius: 6px 6px 0 0;
+            }
+        }
+
+        .sc {
+            width: 230px;
+            height: 230px;
+
+            &::before {
+                content: '';
+                position: absolute;
+                width: 2px;
+                height: 150px;
+                background: #fff;
+                z-index: 12;
+                border-radius: 6px 6px 0 0;
+            }
+        }
+
+        .hr, .mn, .sc {
+            display: flex;
+            justify-content: center;
+            border-radius: 50%;
+        }
+    }
 }
 
 .area {
@@ -150,12 +195,12 @@ p {
     0% {
         transform: translateY(0) rotate(0deg);
         opacity: 1;
-        border-radius: 0;
+        border-radius: 100%;
     }
 
     100% {
         transform: translateY(-1000px) rotate(720deg);
         opacity: 0.2;
-        border-radius: 50%;
+        border-radius: 100%;
     }
 }
