--- a/src/app/summary/summary.component.scss
+++ b/src/app/summary/summary.component.scss
@@ -28,7 +28,8 @@
 }
 
 .task-overview,
-.done-cards, .deadline-card {
+.done-cards,
+.deadline-card {
     display: flex;
     justify-content: space-around;
     width: 40vw;
@@ -52,11 +53,13 @@
     h3 {
         font-size: 42px;
         color: white;
+        margin-top: 16px;
 
         &:last-child {
             color: var(--header);
             font-weight: 600;
             margin-left: 16px;
+            margin-top: 0;
 
             mat-icon {
                 font-size: 28px;
@@ -64,4 +67,19 @@
             }
         }
     }
+}
+
+.context {
+    z-index: 2;
+    position: absolute;
+    top: 10vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+p {
+    margin-top: 24px;
+    margin-bottom: 48px;
 }
