--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -24,18 +24,43 @@
             </div>
 
             <div class="deadline-card">
-                <mat-card>1 Urgent Deadline</mat-card>
+                <mat-card>
+                    <div class="urgent-icon">
+                        <div>
+                            <mat-icon>keyboard_double_arrow_up</mat-icon>
+                        </div>
+                        <div>
+                            <span>1</span> <br>
+                            <span>Urgent</span>
+                        </div>
+                    </div>
+
+                    <div class="urgent-date">
+                        <h4>March, 6, 2023</h4>
+                        <h4>Upcoming Deadline</h4>
+                    </div>
+                </mat-card>
             </div>
 
             <div class="done-cards">
                 <mat-card>
-                    <span>1</span> <br>
-                    <span>To-do</span>
+                    <div>
+                        <mat-icon>file_open</mat-icon>
+                    </div>
+                    <div>
+                        <span>1</span> <br>
+                        <span>To-do</span>
+                    </div>
                 </mat-card>
 
                 <mat-card>
-                    <span>1</span> <br>
-                    <span>Done</span>
+                    <div>
+                        <mat-icon>check</mat-icon>
+                    </div>
+                    <div>
+                        <span>1</span> <br>
+                        <span>Done</span>
+                    </div>
                 </mat-card>
             </div>
         </div>
