--- a/src/app/summary/summary.component.scss
+++ b/src/app/summary/summary.component.scss
@@ -11,7 +11,7 @@
     display: flex;
     align-items: center;
     width: 80vw;
-    margin-top: 10vh;
+    margin-top: 5vh;
 }
 
 .summary-cards {
@@ -19,8 +19,9 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    width: 40vw;
-    height: 50vh;
+    width: 35vw;
+    height: 60vh;
+    margin-left: 5vw;
 
     div {
         display: flex;
@@ -31,14 +32,120 @@
 .done-cards,
 .deadline-card {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 40vw;
 
     mat-card {
         display: flex;
-        flex-direction: column;
         align-items: center;
+        justify-content: center;
         color: var(--font);
+        border-radius: 24px;
+
+        span {
+            text-align: center;
+            font-size: 16px;
+
+            &:first-child {
+                font-size: 56px;
+                font-weight: 600;
+            }
+        }
+    }
+}
+
+.task-overview {
+    mat-card {
+        height: 90px;
+        width: 150px;
+        flex-direction: column;
+    }
+}
+
+.deadline-card {
+    mat-card {
+        height: 90px;
+        width: 100%;
+        justify-content: space-around;
+
+        .urgent-icon {
+            width: 40%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            border-right: 1px solid var(--font);
+
+            mat-icon {
+                height: 56px;
+                width: 60px;
+                font-size: 48px;
+                padding: 8px;
+                background: #eb4141;
+                color: white;
+                border-radius: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            div {
+                &:last-child {
+                    flex-direction: column;
+                    margin-left: 20px;
+                    margin-top: 12px;
+                }
+            }
+        }
+
+        .urgent-date {
+            display: flex;
+            flex-direction: column;
+
+            h4 {
+                margin: 0;
+
+                &:first-child {
+                    font-size: 20px;
+                    font-weight: 600;
+                    margin-bottom: 6px;
+                }
+            }
+        }
+    }
+}
+
+.done-cards {
+    display: flex;
+
+    mat-card {
+        height: 90px;
+        width: 17vw;
+
+        div {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 40%;
+            height: 100%;
+
+            &:last-child {
+                margin-top: 12px;
+            }
+
+            mat-icon {
+                height: 56px;
+                width: 60px;
+                font-size: 48px;
+                padding: 8px;
+                background: var(--font);
+                color: white;
+                border-radius: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
     }
 }
 
@@ -53,7 +160,7 @@
     h3 {
         font-size: 42px;
         color: white;
-        margin-top: 16px;
+        margin-top: 24px;
 
         &:last-child {
             color: var(--header);
