get current date for urgent

--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -36,7 +36,7 @@
                     </div>
 
                     <div class="urgent-date">
-                        <h4>March, 6, 2023</h4>
+                        <h4>{{ month }} {{ today | date: "dd" }}, {{ today | date: "yyyy" }}</h4>
                         <h4>Upcoming Deadline</h4>
                     </div>
                 </mat-card>
