add router links

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <div class="nav-bg">
     <nav class="nav-top">
         <div class="btn-box-top">
-            <button mat-button class="active-btn">Summary</button>
-            <button mat-button>Board</button>
-            <button mat-button>Contact</button>
+            <button mat-button class="active-btn" routerLink="/summary">Summary</button>
+            <button mat-button routerLink="/board">Board</button>
+            <button mat-button routerLink="/contact">Contact</button>
         </div>
 
         <button mat-icon-button class="help-btn" matTooltip="Help" matTooltipPosition="above">
