--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -1,4 +1,4 @@
-<mat-card class="summary-container">
+<mat-card class="container-style container-position">
     <div class="card-header">
         <h1>Summary</h1>
         <h3>Task overview</h3>
