--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <router-outlet></router-outlet>
 <app-navbar></app-navbar>
 <div class="container">
-    <app-summary></app-summary>
+    <!-- <app-summary></app-summary> -->
 </div>
