--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,5 @@
-.container {
-    padding-left: 10vw;
+app-navbar {
     position: absolute;
-    top: 72px;
-    left: 0px;
+    top: 0;
+    left: 0;
 }
