--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="nav-bg">
     <nav class="nav-top">
-        <div class="btn-box-top">
-            <button mat-button class="active-btn" routerLink="/summary">Summary</button>
+        <div class="btn-box-top" (click)="onButtonGroupClick($event)">
+            <button mat-button routerLink="/summary">Summary</button>
             <button mat-button routerLink="/board">Board</button>
             <button mat-button routerLink="/contact">Contact</button>
         </div>
