--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,3 +1,6 @@
 <mat-card class="container-style container-position">
-    <p>board works!</p>
+    <div class="card-header">
+        <h1>Board</h1>
+        <h3>Task Status</h3>
+    </div>
 </mat-card>
