--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,6 @@
 <mat-card class="container-style container-position">
-    <p>contact works!</p>
+    <div class="card-header">
+        <h1>Contact</h1>
+        <h3>Contact List</h3>
+    </div>
 </mat-card>
