--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -33,10 +33,19 @@
     padding-top: 24px;
 
     h1 {
-        font-size: 42px;
+        font-size: 58px;
         font-weight: 800;
         margin: 0;
         color: var(--header);
+        margin-top: 18px;
+        transform: rotate(-90deg);
+        letter-spacing: -8px;
+        -webkit-text-stroke: 0.5px white;
+
+        &:first-letter {
+            color: var(--bg-light);
+            font-size: 100px;
+        }
     }
 }
 
@@ -63,7 +72,7 @@
     }
 }
 
-.active-btn {
+.active-btn-top {
     box-shadow: 0px 0px 6px 2px #f1e0fe;
 }
 
