--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -3,4 +3,78 @@
         <h1>Board</h1>
         <h3>Task Status</h3>
     </div>
+
+    <div class="card-body">
+        <div class="progress-box">
+            <div class="progress-header">
+                <h1>To do</h1>
+                <button mat-icon-button>
+                    <mat-icon>add_circle</mat-icon>
+                </button>
+            </div>
+
+            <div class="task-cards">
+                <mat-card>
+                    <button mat-raised-button color="warn">Design</button>
+                    <h4>Task Name</h4>
+                    <span>Task description</span>
+                    <button mat-button>AÜ</button>
+                </mat-card>
+            </div>
+        </div>
+
+        <div class="progress-box">
+            <div class="progress-header">
+                <h1>In progress</h1>
+                <button mat-icon-button>
+                    <mat-icon>add_circle</mat-icon>
+                </button>
+            </div>
+
+            <div class="task-cards">
+                <mat-card>
+                    <button mat-raised-button color="warn">Sales</button>
+                    <h4>Task Name</h4>
+                    <span>Task description</span>
+                    <button mat-button>AÜ</button>
+                </mat-card>
+            </div>
+        </div>
+
+        <div class="progress-box">
+            <div class="progress-header">
+                <h1>Awaiting Feedback</h1>
+                <button mat-icon-button>
+                    <mat-icon>add_circle</mat-icon>
+                </button>
+            </div>
+
+            <div class="task-cards">
+                <mat-card>
+                    <button mat-raised-button color="warn">Backoffice</button>
+                    <h4>Task Name</h4>
+                    <span>Task description</span>
+                    <button mat-button>AÜ</button>
+                </mat-card>
+            </div>
+        </div>
+
+        <div class="progress-box">
+            <div class="progress-header">
+                <h1>Done</h1>
+                <button mat-icon-button>
+                    <mat-icon>add_circle</mat-icon>
+                </button>
+            </div>
+
+            <div class="task-cards">
+                <mat-card>
+                    <button mat-raised-button color="warn">Marketing</button>
+                    <h4>Task Name</h4>
+                    <span>Task description</span>
+                    <button mat-button>AÜ</button>
+                </mat-card>
+            </div>
+        </div>
+    </div>
 </mat-card>
