--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -41,6 +41,7 @@
         transform: rotate(-90deg);
         letter-spacing: -8px;
         -webkit-text-stroke: 0.5px white;
+        filter: drop-shadow(3px 0px 2px #ffffff);
 
         &:first-letter {
             color: var(--bg-light);
@@ -56,6 +57,10 @@
         color: var(--bg-light);
         font-size: 20px;
         font-weight: 800;
+
+        &:hover {
+            color: var(--header);
+        }
     }
 }
 
@@ -74,6 +79,7 @@
 
 .active-btn-top {
     box-shadow: 0px 0px 6px 2px #f1e0fe;
+    color: var(--header) !important;
 }
 
 .account {
