--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,5 +1,5 @@
 .card-header {
-    margin-bottom: 58px;
+    margin-bottom: 32px;
 
     h1 {
         width: 130px;
@@ -17,6 +17,8 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 12px;
+    margin-left: 12px;
+    width: 95%;
 
     h1 {
         margin: 0;
@@ -25,21 +27,83 @@
     }
 
     mat-icon {
-        color: var(--header);  
+        color: var(--header);
+
+        &:hover {
+            filter: brightness(1.2);
+        }
     }
 }
 
 .progress-box {
-    width: 245px;
-    height: 65vh;
+    width: 260px;
+    height: 70vh;
     overflow-y: auto;
+    padding: 8px;
+    border: 3px dotted rgb(255 255 255 / 12%);
+    border-radius: 24px;
 }
 
 .task-cards {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     mat-card {
         display: flex;
         flex-direction: column;
         width: 200px;
         border-radius: 24px;
+        margin-bottom: 12px;
     }
+}
+
+.add-card {
+    width: 200px;
+    padding: 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    border: 2px dashed #ffffff54;
+    border-radius: 24px;
+    color: #ffffff54;
+
+    &:hover {
+        cursor: pointer;
+        border: 2px dashed white;
+        color: white;
+    }
+}
+
+.task-category {
+    width: 100px;
+    text-align: center;
+    border-radius: 8px;
+    // background: var(--orange);
+    color: white;
+}
+
+.task-name {
+    color: var(--font);
+    margin-top: 8px;
+    margin-bottom: 4px;
+    font-weight: 600;
+}
+
+.task-description {
+    color: var(--grey);
+    margin-bottom: 8px;
+}
+
+.task-assigned {
+    background: #9327FF;
+    color: white;
+    border-radius: 50%;
+    font-size: 18px;
+    font-weight: 600;
+    width: fit-content;
+    height: fit-content;
+    padding: 8px;
 }
