--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
 html,
 body {
   height: 100%;
@@ -8,6 +6,7 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  cursor: context-menu;
 }
 
 :root {
@@ -15,6 +14,35 @@ body {
   --bg-light: #BBC1E1;
   --header: #647dfe;
   --font: #4b5585;
+  --grey: #A8A8A8;
+  --orange: #FF7A00;
+  --pink: #FC71FF;
+  --green: #1FD7C1;
+  --blue: #0038FF;
+}
+
+*::-webkit-scrollbar {
+  display: block;
+  width: 8px;
+  height: 6px;
+}
+
+*::-webkit-scrollbar-button {
+  display: none;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: #00000000;
+}
+
+*::-webkit-scrollbar-track-piece {
+  background-color: #00000000;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #9aa5e0;
+  border: 1px solid #5866af;
+  border-radius: 24px;
 }
 
 .container-position {
