--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -27,7 +27,7 @@
                 <mat-icon>sunny</mat-icon>
             </button>
 
-            <button mat-icon-button matTooltip="Add Note" matTooltipPosition="right">
+            <button mat-icon-button matTooltip="Add Task" matTooltipPosition="right" (click)="openDialogAddTask()">
                 <mat-icon>note_add</mat-icon>
             </button>
 
