--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,8 +1,54 @@
 .card-header {
-    margin-bottom: 32px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 42px;
 
     h1 {
         width: 130px;
+    }
+
+    button {
+        background: var(--header);
+        color: white;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &:hover {
+            transform: scale3d(1.1, 1.1, 1.1);
+            transition: 225ms ease-in-out;
+        }
+    }
+
+    span {
+        margin-right: 24px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 6px;
+        border: 1px solid rgba(255, 255, 255, 0.712);
+        border-radius: 10px;
+
+        mat-icon {
+            margin-left: 4px;
+            padding-left: 6px;
+            border-left: 1px solid rgba(255, 255, 255, 0.712);
+            color: rgba(255, 255, 255, 0.712);
+        }
+
+        input {
+            background: var(--bg-light);
+            border: none;
+            padding-left: 8px;
+            color: var(--font);
+
+            &:focus {
+                outline: none;
+            }
+        }
     }
 }
 
@@ -41,6 +87,7 @@
     overflow-y: auto;
     padding: 8px;
     border: 3px dotted rgb(255 255 255 / 12%);
+    background: rgb(255 255 255 / 12%);
     border-radius: 24px;
 }
 
@@ -51,10 +98,47 @@
 
     mat-card {
         display: flex;
-        flex-direction: column;
+        // flex-direction: row-reverse;
         width: 200px;
         border-radius: 24px;
         margin-bottom: 12px;
+        background: #f1f4fd;
+        position: relative;
+        height: 116px;
+        max-height: 116px;
+        padding-bottom: 8px;
+        padding-top: 8px;
+        box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+
+        &:hover {
+            transform: scale3d(1.1, 1.1, 1.1);
+            transition: 225ms ease-in-out;
+            cursor: pointer;
+        }
+
+        div {
+            &:last-child {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                height: 112px;
+
+                div {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: end;
+                    flex-direction: row;
+                    width: 170px;
+                    height: 38px;
+
+                    mat-icon {
+                        font-size: 36px;
+                        height: 36px;
+                        width: 36px;
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -69,6 +153,7 @@
     border: 2px dashed #ffffff54;
     border-radius: 24px;
     color: #ffffff54;
+    box-shadow: rgb(50 50 93 / 3%) 0px 30px 60px -12px inset, rgb(0 0 0 / 19%) 0px 18px 36px -18px inset;
 
     &:hover {
         cursor: pointer;
@@ -78,23 +163,33 @@
 }
 
 .task-category {
-    width: 100px;
-    text-align: center;
-    border-radius: 8px;
     // background: var(--orange);
     color: white;
+    transform: rotate(90deg);
+    width: 132px;
+    height: 36px;
+    text-align: center;
+    border-top-right-radius: 24px;
+    border-top-left-radius: 24px;
+    color: white;
+    position: absolute;
+    right: -48px;
+    top: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .task-name {
     color: var(--font);
-    margin-top: 8px;
-    margin-bottom: 4px;
+    margin: 0;
+    margin-top: -14px;
     font-weight: 600;
 }
 
 .task-description {
     color: var(--grey);
-    margin-bottom: 8px;
+    height: 20px;
 }
 
 .task-assigned {
