--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,8 @@
 <mat-card class="container-style container-position">
     <div class="card-header">
-        <h1>Contact</h1>
-        <h3>Contact List</h3>
+        <div>
+            <h1>Contact</h1>
+            <h3>Contact List</h3>
+        </div>
     </div>
 </mat-card>
