--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -47,6 +47,12 @@
             color: var(--bg-light);
             font-size: 100px;
         }
+
+        &:hover {
+            transform: rotate(270deg);
+            transition: 750ms ease-in-out;
+            cursor: pointer;
+        }
     }
 }
 
@@ -75,6 +81,11 @@
     mat-icon {
         font-weight: 600;
     }
+
+    &:hover {
+        transform: scale3d(1.1, 1.1, 1.1);
+        transition: 225ms ease-in-out;
+    }
 }
 
 .active-btn-top {
@@ -89,6 +100,11 @@
         background: var(--bg-light);
         color: var(--header);
         box-shadow: 0px 0px 4px 1px #f1e0fe;
+
+        &:hover {
+            transform: scale3d(1.1, 1.1, 1.1);
+            transition: 225ms ease-in-out;
+        }
     }
 }
 
@@ -102,5 +118,10 @@
         background: var(--bg-light);
         color: var(--header);
         box-shadow: 0px 0px 4px 1px #f1e0fe;
+
+        &:hover {
+            transform: scale3d(1.1, 1.1, 1.1);
+            transition: 225ms ease-in-out;
+        }
     }
 }
