--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,6 +45,27 @@ body {
   border-radius: 24px;
 }
 
+::-webkit-input-placeholder {
+  /* WebKit, Blink, Edge */
+  color: rgba(255, 255, 255, 0.712);
+}
+
+:-moz-placeholder {
+  /* Mozilla Firefox */
+  color: rgba(255, 255, 255, 0.712);
+  opacity: 1;
+}
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11, Microsoft Edge */
+  color: rgba(255, 255, 255, 0.712);
+}
+
+::placeholder {
+  /* Most modern browsers support this now. */
+  color: rgba(255, 255, 255, 0.712);
+}
+
 .container-position {
   // padding-left: 10vw;
   position: absolute;
@@ -70,18 +91,22 @@ body {
   margin-top: 16px !important;
 
   h1 {
-      margin-top: 0;
-      margin-bottom: 0;
-      margin-right: 16px;
-      color: var(--header);
-      font-size: 42px;
-      font-weight: 600;
-      border-right: 2px solid var(--header);
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-right: 16px;
+    color: var(--header);
+    font-size: 42px;
+    font-weight: 600;
+    border-right: 2px solid var(--header);
   }
 
   h3 {
-      margin: 0;
-      font-weight: 600;
-      color: var(--header);
+    margin: 0;
+    font-weight: 600;
+    color: var(--header);
   }
+
+  div {
+    display: flex;
+}
 }
