start add task style

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -31,7 +31,7 @@
                     <span class="task-category" style="background: var(--orange)">Design</span>
 
                     <div>
-                        <span class="task-description">Date</span>
+                        <span class="task-date">Date</span>
                         <h4 class="task-name">Task Name</h4>
                         <div>
                             <span class="task-assigned">AÜ</span>
@@ -62,7 +62,7 @@
                     <span class="task-category" style="background: var(--pink)">Sales</span>
 
                     <div>
-                        <span class="task-description">Date</span>
+                        <span class="task-date">Date</span>
                         <h4 class="task-name">Task Name</h4>
 
                         <div>
@@ -94,7 +94,7 @@
                     <span class="task-category" style="background: var(--green)">Backoffice</span>
 
                     <div>
-                        <span class="task-description">Date</span>
+                        <span class="task-date">Date</span>
                         <h4 class="task-name">Task Name</h4>
 
                         <div>
@@ -126,7 +126,7 @@
                     <span class="task-category" style="background: var(--blue)">Marketing</span>
 
                     <div>
-                        <span class="task-description">Date</span>
+                        <span class="task-date">Date</span>
                         <h4 class="task-name">Task Name</h4>
 
                         <div>
