--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -183,13 +183,11 @@
 .task-name {
     color: var(--font);
     margin: 0;
-    margin-top: -14px;
     font-weight: 600;
 }
 
-.task-description {
+.task-date {
     color: var(--grey);
-    height: 20px;
 }
 
 .task-assigned {
