--- a/src/app/dialog-add-task/dialog-add-task.component.html
+++ b/src/app/dialog-add-task/dialog-add-task.component.html
@@ -1,1 +1,42 @@
-<p>dialog-add-task works!</p>
+<div class="add-task-container">
+    <h2>Add task</h2>
+    <mat-form-field appearance="fill">
+        <mat-label>Title</mat-label>
+        <input matInput>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <mat-label>Description</mat-label>
+        <textarea matInput></textarea>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <mat-label>Category</mat-label>
+        <mat-select>
+            <mat-option value="frontend">Frontend</mat-option>
+            <mat-option value="backend">Backend</mat-option>
+            <mat-option value="design">Design</mat-option>
+            <mat-option value="marketing">Marketing</mat-option>
+            <mat-option value="backoffice">Backoffice</mat-option>
+            <mat-option value="other">Other</mat-option>
+        </mat-select>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <mat-label>Assigned to</mat-label>
+        <mat-select>
+            <mat-option value="person">Person</mat-option>
+        </mat-select>
+    </mat-form-field>
+
+    <div class="priotity-section">
+        <mat-label>Priority</mat-label>
+        <mat-radio-group class="example-radio-group"
+        [(ngModel)]="choosenCategory">
+        <mat-radio-button class="example-radio-button" *ngFor="let button of categoryBtn" value="{{ button.name }}">
+            {{ button.name[0].toUpperCase() }}{{ button.name.slice(1).toLowerCase() }}
+          <mat-icon class="{{ button.name }}-btn">{{ button.icon }}</mat-icon>
+        </mat-radio-button>
+      </mat-radio-group>
+    </div>
+</div>
