add hover icons to task card

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -27,8 +27,13 @@
             </div>
 
             <div class="task-cards">
-                <mat-card>
+                <mat-card  class="hide-icons">
                     <span class="task-category" style="background: var(--orange)">Design</span>
+
+                    <div class="pin-icons">
+                        <mat-icon matTooltip="Delete task" matTooltipPosition="above" matTooltipClass="tooltip-blue">delete</mat-icon>
+                        <mat-icon matTooltip="Pin task to top" matTooltipPosition="above" matTooltipClass="tooltip-blue">push_pin</mat-icon>
+                    </div>
 
                     <div>
                         <span class="task-date">Date</span>
@@ -58,8 +63,13 @@
             </div>
 
             <div class="task-cards">
-                <mat-card>
+                <mat-card class="hide-icons">
                     <span class="task-category" style="background: var(--pink)">Sales</span>
+
+                    <div class="pin-icons">
+                        <mat-icon matTooltip="Delete task" matTooltipPosition="above" matTooltipClass="tooltip-blue">delete</mat-icon>
+                        <mat-icon matTooltip="Pin task to top" matTooltipPosition="above" matTooltipClass="tooltip-blue">push_pin</mat-icon>
+                    </div>
 
                     <div>
                         <span class="task-date">Date</span>
@@ -90,8 +100,13 @@
             </div>
 
             <div class="task-cards">
-                <mat-card>
+                <mat-card  class="hide-icons">
                     <span class="task-category" style="background: var(--green)">Backoffice</span>
+
+                    <div class="pin-icons">
+                        <mat-icon matTooltip="Delete task" matTooltipPosition="above" matTooltipClass="tooltip-blue">delete</mat-icon>
+                        <mat-icon matTooltip="Pin task to top" matTooltipPosition="above" matTooltipClass="tooltip-blue">push_pin</mat-icon>
+                    </div>
 
                     <div>
                         <span class="task-date">Date</span>
@@ -122,8 +137,13 @@
             </div>
 
             <div class="task-cards">
-                <mat-card>
+                <mat-card  class="hide-icons">
                     <span class="task-category" style="background: var(--blue)">Marketing</span>
+
+                    <div class="pin-icons">
+                        <mat-icon matTooltip="Delete task" matTooltipPosition="above" matTooltipClass="tooltip-blue">delete</mat-icon>
+                        <mat-icon matTooltip="Pin task to top" matTooltipPosition="above" matTooltipClass="tooltip-blue">push_pin</mat-icon>
+                    </div>
 
                     <div>
                         <span class="task-date">Date</span>
