--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
             </button>
         </div>
 
-        <button mat-icon-button class="help-btn" matTooltip="Help" matTooltipPosition="above">
+        <button mat-icon-button class="help-btn" matTooltip="Help" matTooltipPosition="above" matTooltipClass="tooltip-blue" matTooltipClass="tooltip-blue">
             <mat-icon>question_mark</mat-icon>
         </button>
     </nav>
@@ -19,23 +19,23 @@
         </div>
 
         <div class="btn-box-left">
-            <button mat-icon-button matTooltip="Open Calendar" matTooltipPosition="right">
+            <button mat-icon-button matTooltip="Open Calendar" matTooltipPosition="right" matTooltipClass="tooltip-blue">
                 <mat-icon>calendar_month</mat-icon>
             </button>
 
-            <button mat-icon-button matTooltip="Open Weather" matTooltipPosition="right">
+            <button mat-icon-button matTooltip="Open Weather" matTooltipPosition="right" matTooltipClass="tooltip-blue">
                 <mat-icon>sunny</mat-icon>
             </button>
 
-            <button mat-icon-button matTooltip="Add Task" matTooltipPosition="right" (click)="openDialogAddTask()">
+            <button mat-icon-button matTooltip="Add Task" matTooltipPosition="right" matTooltipClass="tooltip-blue" (click)="openDialogAddTask()">
                 <mat-icon>note_add</mat-icon>
             </button>
 
-            <button mat-icon-button matTooltip="Add Contact" matTooltipPosition="right">
+            <button mat-icon-button matTooltip="Add Contact" matTooltipPosition="right" matTooltipClass="tooltip-blue">
                 <mat-icon>person_add</mat-icon>
             </button>
 
-            <button mat-icon-button matTooltip="Open Archive" matTooltipPosition="right">
+            <button mat-icon-button matTooltip="Open Archive" matTooltipPosition="right" matTooltipClass="tooltip-blue">
                 <mat-icon>archive</mat-icon>
             </button>
         </div>
